@@ -1,5 +1,10 @@
 Changes since CEXP-2.1
+ 2013/01/17:
+ - INSTALL, binutils-2.23.diff: Updated; can now use binutils-2.23
  2013/01/16:
+ - cexpmod.c, cexpsymsP.h, elfdlmap.c, elfsyms.c, rshload.c,
+   xsyms.c, cexpsegs-powerpc-rtems.c:
+   Fixed compiler warnings.
  - BUGFIX: cexpmod.c. segment pointer in module structure was
    dereferenced unconditionally but it can be NULL. Added 
    respective checks.
